--- a/static/less/ZTB.less
+++ b/static/less/ZTB.less
@@ -71,6 +71,34 @@ body {
         box-shadow: none;
         background-color: #FFF;
     }
+    .headerpic-product-1 {
+        .headerpic-product-1-bg {
+            height: 300px;
+            background: #FCAD74 url('/static/pic/banner_product_1_bg.jpg') no-repeat top center;
+        }
+        .headerpic-product-1-line {
+            height: 16px;
+            background: #FFF url('/static/pic/header_product_1_line.jpg') no-repeat top center;
+        }
+        .am-panel {
+            border: 0 none;
+            border-radius: 10px;
+            background-color: #FBC297;
+            color: #FFF;
+        }
+        .am-btn {
+            color: #F49368;
+            border: 1px solid #F49368;
+            background-color: #FFF;
+            &:hover {
+                color: #FFF;
+                background-color: #F49368;
+            }
+        }
+    }
+    .headerpic-product-new-bg {
+        background-color: #FFC641;
+    }
 }
 // 首页部分
 .index-layer {
